# tinynav

./: .all-contributorsrc  .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  devcontainer_cn.json
.github/workflows/: benchmark_ci.yml  build_multi.yml  cloc-action.yml  core_import_check.yml  cpp_build.yml  model_make_all_check.yml  python-quality-check.yml  uv_lock_file_check.yml
app/: README.md
app/backend/: README.md  main.py  map_renderer.py  mock_server.py  node_manager.py  state.py  ws.py
app/backend/routers/: action.py  bag.py  device.py  files.py  map.py  nav.py  poi.py  sensor.py
app/frontend/: .gitignore  README.md  pubspec.yaml
app/frontend/android/app/: build.gradle.kts
app/frontend/ios/Runner/: Info.plist
app/frontend/ios/Runner.xcodeproj/: project.pbxproj
app/frontend/lib/: main.dart
app/frontend/lib/core/: models.dart  providers.dart
app/frontend/lib/pages/: device_tab.dart  home_page.dart  map_painter.dart  map_preview_page.dart  map_tab.dart  nav_tab.dart  operate_tab.dart  planning_painter.dart  setup_page.dart
app/frontend/linux/: CMakeLists.txt
app/frontend/linux/runner/: my_application.cc
app/frontend/macos/Runner.xcodeproj/: project.pbxproj
app/frontend/test/: widget_test.dart
app/frontend/web/: index.html  manifest.json
app/frontend/windows/: CMakeLists.txt
docs/: README.md  preview.perspective  vis.rviz
scripts/: README.md  check_env.sh  docker_run.sh  run_3dgs_generation.sh  run_global_pointcloud.sh  run_looper_bag_record.sh  run_looper_navigation.sh  run_map_record.sh  run_navigation.sh  run_planning.sh  run_realsense_bag_record.sh  run_realsense_sensor.sh  run_rosbag_build_map.sh  run_rosbag_examples.sh  run_rosbag_record.sh  run_sensors_preview.sh  run_simulator.sh  start_app.sh
tests/: test_backend.py  test_foundation_stereo_trt.py  test_input_aligner_csv_cases.py  test_map_node.py  test_models_trt.py  test_planning_node.py
tests/data/looper/: calib.txt
tests/data/realsense/: calib.txt
tinynav/core/: build_map_node.py  control_node.py  driver_node.py  imu_propagator_node.py  map_node.py  math_utils.py  models_trt.py  perception_node.py  planning_node.py  stereo_engine.py
tinynav/cpp/: CMakeLists.txt  bundle_adjustment.cpp  cpp_bind_definitions.cpp  pose_graph_solver.cpp  raycast.cpp
tinynav/models/: Makefile  convert_dinov2.sh  convert_igev.sh  convert_lightglue.sh  convert_retinify.sh  convert_superpoint.sh  dinov2_base_224x224_fp16.onnx  dinov2_base_224x224_fp16_aarch64.plan  dinov2_base_224x224_fp16_x86_64.plan  foundation_stereo.onnx  foundation_stereo_11-33-40_288x320.onnx  foundation_stereo_11-33-40_288x320.plan  lightglue_fp16.onnx  lightglue_fp16_aarch64.plan  lightglue_fp16_x86_64.plan  retinify_0_1_4_480x848.onnx  retinify_0_1_4_480x848_aarch64.plan  retinify_0_1_4_480x848_x86_64.plan  retinify_0_1_5_480x848.onnx  retinify_0_1_5_480x848_aarch64.plan  retinify_0_1_5_480x848_x86_64.plan  retinify_0_1_5_dynamic.onnx  rt_igev4gru_256x448_fp16_aarch64.plan  rt_igev4gru_256x448_fp16_x86_64.plan  rt_igev4gru_stereo.onnx  superpoint_240x424_fp16.onnx  superpoint_240x424_fp16_aarch64.plan  superpoint_240x424_fp16_x86_64.plan  superpoint_360x640_fp16_aarch64.plan  superpoint_360x640_fp16_x86_64.plan  superpoint_480x848_fp16_aarch64.plan  superpoint_480x848_fp16_x86_64.plan  superpoint_fp16_dynamic.onnx
tool/: bundle_adjustment_refiner.py  convert_to_colmap_format.py  convert_to_nerf_format.py  foundation_stereo_trt.py  global_pointcloud_publisher.py  looper_bridge_node.py  poi_editor.py  pub_pois.py  ros2_node_manager.py  video_db.py
tool/benchmark/: README.md  benchmark_mapping.py
tool/simulator/: camera_info_publisher.py  robot_scene.sdf
(+6 files in other folders)
