[build-system]
requires = ["scikit-build-core", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "tinynav"
version = "0.1.3"
description = "minimal implementation of navigation"
requires-python = ">=3.10.12,<3.11"
authors = [{ name = "Zhenfei Yang", email = "zhenfei.yang@deepmirror.com" }]
dependencies = [
    "numpy==1.26.1", # for compatability with ros2's cv_bridge
    "scipy",
    "matplotlib",
    "opencv-python",
    "notebook",
    "jupyterlab",
    "codetiming",
    "numba",
    "pygame",
    "cuda_python==12.6.0; platform_machine == 'aarch64'",
    "cuda-python==12.2.0; platform_machine == 'x86_64'",
    "pybind11",
    "huggingface_hub",
    "einops",
    "tyro",
    "reportlab>=4.4.3",
    "tabulate",
    "pycuda",
    "viser",
]

[tool.scikit-build]
cmake.source-dir = "tinynav/cpp"
wheel.install-dir = "tinynav"


[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[project.optional-dependencies]
lekiwi =[
    "lerobot[lekiwi]==0.3.3",
]
unitree = [
    "unitree-sdk2py @ git+https://github.com/unitreerobotics/unitree_sdk2_python.git@404fe44d76f705c002c97e773276f2a8fefb57e4",
]
3dgs = [
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
    "plyfile",
    "nerfstudio @ git+https://github.com/junlinp/nerfstudio.git",
    "pymeshlab==2022.2.post4",
    "newrawpy<=1.0.0b0",
]

